apps/cert-manager/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-egress
  namespace: cert-manager
spec:
  endpointSelector: {}
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: cert-manager
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "9402"
        protocol: TCP
  - toFQDNs:
    - matchName: acme-v02.api.letsencrypt.org
    - matchName: api.cloudflare.com
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
